--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sigmaxz/mygithubpage">View on GitHub</a>
 
-          <h1 id="project_title">Test</h1>
-          <h2 id="project_tagline">test</h2>
+          <h1 id="project_title">Samuel Villarreal</h1>
+          <h2 id="project_tagline">Software Engineer</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/sigmaxz/mygithubpage/zipball/master">Download this project as a .zip file</a>
