--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <h1 id="project_title">Samuel Villarreal</h1>
           <h2 id="project_tagline">Software Engineer</h2>
 
-            <section id="downloads">
+  <!--          <section id="downloads">
               <a class="zip_download_link" href="https://github.com/sigmaxz/mygithubpage/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/sigmaxz/mygithubpage/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+            </section> -->
         </header>
     </div>
 
