--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Test</title>
+    <title>Samuel Villarreal Homepage</title>
   </head>
 
   <body>
@@ -41,29 +41,70 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2 align=center> <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h2>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+<nav> <center><a  href = "./projects.html">Projects</a> 
+	<a   href = "./engra.html">Engineering Affiliations</a>
+	<a   href = "./ran.html">Random</a>
+	<a   href = "./res.html">Resume</a></center>
+	
+</nav>
+<br> 
+<img src="temp.jpg" alt="temp photo" width="220" height="300" align="left" style="margin:20px">
+<hr>
+<h2> About Me </h2>
+<script>
+	if(confirm("Do you want to give your name?"))
+	{
+		var name = prompt("Whats your name?");
+		if( name != "null" )
+		{
+			document.write("<p> Hi " + name)
+			if( name == "")
+			{
+				document.write("Mr. Blank")
+			}	
+		}
+		else{
+			document.write("<p> Hi anonymous trickster")
+		}	
+	}
+	else{
+		document.write("<p> Hi anonymous")
+	}
+</script>
+ , I am Samuel Villarreal and this is my University of California Riverside homepage.<br>
+ This is my fourth and expected final year as an undergraduate working towards B.S. in Computer Science. <br>
+ My expected graduation date is June 2015. </p>
+<hr>
+<h2> Interests </h2>
+<p> The field of Computer Security has always been a field of interest throughout my undergraduate 
+studies. Knowledge in the areas of Operating Systems, Networking and Databases may prove be useful.
+I took Computer Secruity with Professor and Associate Dean Ravishankar. Computer Secruity is a hard and rewarding course packed with knowledge computer science professionals should know. 
+<br>
+Another of my interests is in the field of High Performance Computing. Software and applications are not fully taking advantage of the power of multicore processors. The future in computer science is going to be efficiently managing these new architectures. 
+In a related matter I did research with Dr.Chen at the University of California Riverside concerning matrix multiplication. <br> 
+I am currently looking for Full-time opportunities and graduate programs </p>
+<hr>
+<h2> Courses</h2>
+<ul>
+<li> CS100 Software Construction</li>
+<li> Math126 Combinatorics </li>
+<li> CS120A Logic design</li>
+<li> CS120B Embedded Systems</li>
+<li> CS150 Theory of Automata</li>
+<li> CS152 Compilers <font color='red'>(in Progress)</font> </li>
+<li> CS153 Operating Systems </li>
+<li> CS160 Concurrent Programming and Parallel Systems</li>
+<li> CS161  Design and Architecture of Computer Systems</li>
+<li margin:10; > CS141 Intermideate Algorithms and Data Structures </li>
+<li> CS165 Computer Security </li>
+<li> CS166 Database Management systems </li>
+<li> CS169 Wireless Networks <font color='red'>(in Progress)</font> </li>
+<li> CS172 Information Retrival </li>
+<li> CS180 Software Engineering </li>
+</ul>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
