--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
           <h1 id="project_title">Samuel Villarreal</h1>
           <h2 id="project_tagline">Software Engineer</h2>
+		  <nav> <center><a  href = "./projects.html">Projects</a> 
+		  <a   href = "./engra.html">Engineering Affiliations</a>
+		  <a   href = "./ran.html">Random</a>
+		  <a   href = "./res.html">Resume</a></center>
+	
+		  </nav>
 
   <!--          <section id="downloads">
               <a class="zip_download_link" href="https://github.com/sigmaxz/mygithubpage/zipball/master">Download this project as a .zip file</a>
@@ -36,14 +42,8 @@
 <h2 align=center> <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h2>
 
 
-<nav> <center><a  href = "./projects.html">Projects</a> 
-	<a   href = "./engra.html">Engineering Affiliations</a>
-	<a   href = "./ran.html">Random</a>
-	<a   href = "./res.html">Resume</a></center>
-	
-</nav>
 <br> 
-<img src="temp.jpg" alt="temp photo" width="220" height="300" align="left" style="margin:20px">
+<img src="/images/temp.jpg" alt="temp photo" width="220" height="300" align="left" style="margin:20px">
 <hr>
 <h2> About Me </h2>
 <script>
