--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sigmaxz/mygithubpage">View on GitHub</a>
 
-          <h1 id="project_title">Samuel Villarreal</h1>
-          <h2 id="project_tagline">Software Engineer</h2>
+          <h1 id="page_title">Samuel Villarreal</h1>
+          <h2 id="page_tagline">Software Engineer <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h2>
 		  <nav> <center><a  href = "./projects.html">Projects</a> 
 		  <a   href = "./engra.html">Engineering Affiliations</a>
-		  <a   href = "./ran.html">Random</a>
 		  <a   href = "./res.html">Resume</a></center>
 	
 		  </nav>
@@ -39,7 +38,7 @@
       <section id="main_content" class="inner">
 
 
-<h2 align=center> <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h2>
+
 
 
 <br> 
@@ -67,8 +66,8 @@
 	}
 </script>
  , I am Samuel Villarreal and this is my University of California Riverside homepage.<br>
- This is my fourth and expected final year as an undergraduate working towards B.S. in Computer Science. <br>
- My expected graduation date is June 2015. </p>
+ This is my fourth and final year as an undergraduate working towards B.S. in Computer Science. <br>
+ My graduation date is June 2015. </p>
 <hr>
 <h2> Interests </h2>
 <p> The field of Computer Security has always been a field of interest throughout my undergraduate 
