--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sigmaxz/mygithubpage">View on GitHub</a>
 
-          <h1 id="page_title">Samuel Villarreal</h1>
-          <h2 id="page_tagline">Software Engineer <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h2>
+          <h1 id="project_title">Samuel Villarreal</h1>
+          <h2 id="project_tagline">Software Engineer </h2>
+		  <h2 align=center> <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h2>
 		  <nav> <center><a  href = "./projects.html">Projects</a> 
 		  <a   href = "./engra.html">Engineering Affiliations</a>
 		  <a   href = "./res.html">Resume</a></center>
