--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
           <h1 id="project_title">Samuel Villarreal</h1>
           <h2 id="project_tagline">Software Engineer </h2>
-		  <h3 align=center> <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
-		  <nav> <center><a  href = "./projects.html">Projects</a> 
+		  <h3 > <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
+		  <nav> <a  href = "./projects.html">Projects</a> 
 		  <a   href = "./engra.html">Engineering Affiliations</a>
-		  <a   href = "./res.html">Resume</a></center>
+		  <a   href = "./res.html">Resume</a>
 	
 		  </nav>
 
