--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <meta name="description" content="Test : test">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<style type="text/css">
+		nav {background-color:#cFDFFF;  height:30px;}
+		img {
+		display:block;
+		background-color:#b2f4ff;
+		padding: 5px 10px 5px 10px;
+		margin:10px 0px 0px 0px;
+		}
+		img:hover, img:active{
+		display:block;
+		padding: 5px 5px 5px 15px;
+		}
+		nav a {
+		display:block;
+		float:left;
+		positon:relative;
+		font-family: Arial, Verdana;
+		font-size: 20px;
+		margin: 0;
+		padding: 5px 10px 5px 10px;
+		text-decoration: none;
+ 
+		}
+		nav a:hover, nav a:active{ background-color:#FFFFCC;}
+    </style>
 
     <title>Samuel Villarreal Homepage</title>
   </head>
