--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h1 id="project_title">Samuel Villarreal</h1>
           <h2 id="project_tagline">Software Engineer </h2>
 		  <h3 > <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
-		  <nav> <a  href = "./projects.html">Projects</a> 
+		  <nav> <a  color="b2f3ff" href = "./projects.html">Projects</a> 
 		  <a   href = "./engra.html">Engineering Affiliations</a>
 		  <a   href = "./res.html">Resume</a>
 	
