--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		float:left;
 		positon:relative;
 		font-family: Arial, Verdana;
+		color:#b2f4ff;
 		font-size: 20px;
 		margin: 0;
 		padding: 5px 10px 5px 10px;
@@ -45,7 +46,7 @@
           <h1 id="project_title">Samuel Villarreal</h1>
           <h2 id="project_tagline">Software Engineer </h2>
 		  <h3 > <a href="https://ucr.edu/">University of California Riverside </a> ,<a href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
-		  <nav> <a  color="b2f3ff" href = "./projects.html">Projects</a> 
+		  <nav> <a  href = "./projects.html">Projects</a> 
 		  <a   href = "./engra.html">Engineering Affiliations</a>
 		  <a   href = "./res.html">Resume</a>
 	
