--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		float:left;
 		positon:relative;
 		font-family: Arial, Verdana;
-		color:#3366ff;
+		color:#660099;
 		font-size: 20px;
 		margin: 0;
 		padding: 5px 10px 5px 10px;
