--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <h1 id="project_title">Samuel Villarreal</h1>
           <h2 id="project_tagline">Software Engineer </h2>
-		  <h3  > <a color="66ccff" href="https://ucr.edu/">University of California Riverside </a> ,<a color="66ccff" href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
+		  <h3  > <a style="color:66ccff" href="https://ucr.edu/">University of California Riverside </a> ,<a style="color:66ccff" href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
 		  <nav> <a  href = "./projects.html">Projects</a> 
 		  <a   href = "./engra.html">Engineering Affiliations</a>
 		  <a   href = "./res.html">Resume</a>
