--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		text-decoration: none;
  
 		}
-		nav a:hover, nav a:active{ background-color:#000000;}
+		nav a:hover, nav a:active{ background-color:#ffffff;}
     </style>
 
     <title>Samuel Villarreal Homepage</title>
@@ -94,7 +94,7 @@
  This is my fourth and final year as an undergraduate working towards B.S. in Computer Science. <br>
  My graduation date is June 2015. </p>
 <hr>
-<br><br>
+<br><br><br>
 <h2> Interests </h2>
 <p> The field of Computer Security has always been a field of interest throughout my undergraduate 
 studies. Knowledge in the areas of Operating Systems, Networking and Databases may prove be useful.
