projects.html update

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a id="forkme_banner" href="https://github.com/sigmaxz/mygithubpage">View on GitHub</a>
 
           <h1 id="project_title">Samuel Villarreal</h1>
-          <h2 id="project_tagline">Software Engineer </h2>
+         <!-- <h2 id="project_tagline">Software Engineer </h2> -->
 		  <h3  > <a style="color:white" href="https://ucr.edu/">University of California Riverside </a> ,<a style="color:white" href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
 		  <nav> <a  href = "./projects.html">Projects</a> 
 		  <a   href = "./engra.html">Engineering Affiliations</a>
@@ -94,7 +94,7 @@
  This is my fourth and final year as an undergraduate working towards B.S. in Computer Science. <br>
  My graduation date is June 2015. </p>
 <hr>
-<br><br><br>
+<br><br><br><br>
 <h2> Interests </h2>
 <p> The field of Computer Security has always been a field of interest throughout my undergraduate 
 studies. Knowledge in the areas of Operating Systems, Networking and Databases may prove be useful.
