--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+ <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Test : test">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 <title> Samuel Villarreal ,Projects</title>
 <style type="text/css">
 h1 {color:RED;text-align:center;}
