--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,28 @@ nav a:hover, nav a:active{ background-color:#FFFFCC;}
 </style>
 </head>
 
-<body style="background-color:#c0c0c0;">
+<body >
+<!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/sigmaxz/mygithubpage">View on GitHub</a>
+
+          <h1 id="project_title">Samuel Villarreal</h1>
+         <!-- <h2 id="project_tagline">Software Engineer </h2> -->
+		  <h3  > <a style="color:white" href="https://ucr.edu/">University of California Riverside </a> ,<a style="color:white" href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
+		  <nav> <a  href = "./projects.html">Projects</a> 
+		  <a   href = "./engra.html">Engineering Affiliations</a>
+		  <a   href = "./res.html">Resume</a>
+	
+		  </nav>
+
+  <!--          <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/sigmaxz/mygithubpage/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/sigmaxz/mygithubpage/tarball/master">Download this project as a tar.gz file</a>
+            </section> -->
+        </header>
+    </div>
+	
 <hr>
 <nav> <center><a  href = "http://www.cs.ucr.edu/~svill017/">Home</a> 
 	<a   href = "./engra.html">Engineering Affiliations</a>
@@ -89,6 +110,14 @@ ship. The goal is to collect letters that you will be using to solve a “hanged
 Destroy letters you don’t want enemies along the way. To win use the letters you have 
 
 collected and solve the word, otherwise get hanged for your thievery. </p>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Test maintained by <a href="https://github.com/sigmaxz">sigmaxz</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
 </body>
 </html>
