--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 <title> Samuel Villarreal ,Projects</title>
 <style type="text/css">
-h1 {color:RED;text-align:center;}
-p {color:#000033;}
 a {
 	display:block;
 	background-color:#cFDFFF
@@ -48,28 +46,18 @@ nav a:hover, nav a:active{ background-color:#FFFFCC;}
           <h1 id="project_title">Samuel Villarreal</h1>
          <!-- <h2 id="project_tagline">Software Engineer </h2> -->
 		  <h3  > <a style="color:white" href="https://ucr.edu/">University of California Riverside </a> ,<a style="color:white" href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
-		  <nav> <a  href = "./projects.html">Projects</a> 
+		  <nav> <a  href = "./index.html">Home</a> 
 		  <a   href = "./engra.html">Engineering Affiliations</a>
 		  <a   href = "./res.html">Resume</a>
 	
 		  </nav>
 
-  <!--          <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/sigmaxz/mygithubpage/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/sigmaxz/mygithubpage/tarball/master">Download this project as a tar.gz file</a>
-            </section> -->
         </header>
     </div>
 	
 <hr>
-<nav> <center><a  href = "http://www.cs.ucr.edu/~svill017/">Home</a> 
-	<a   href = "./engra.html">Engineering Affiliations</a>
-	<a   href = "./ran.html">Random</a>
-	<a   href = "./res.html">Resume</a></center>
-	
-</nav>
 <h1 align = center> Projects </h1>
-<img src="UCRSpoon.png" alt="pic of app" width="220" height="350" align="right" >
+<img src="/images/UCRSpoon.png" alt="pic of app" width="220" height="350" align="right" >
 
 <h3> UCRSpoon </h3>
 <p>An android app that mirrors UrbanSpoon for my Software Engineering course. Teamed up with four other classmates to deliver this product. Lets your browse restaurants, review/rate, upload pictures, and place orders. I worked on Backend(design Entity-Relationship database) and Frontend(Reviewing,Rating,Picture/Gallery,Google Maps API).  
