projects header update

--- a/projects.html
+++ b/projects.html
@@ -9,32 +9,29 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 <title> Samuel Villarreal ,Projects</title>
 <style type="text/css">
-a {
-	display:block;
-	background-color:#cFDFFF
-	positon:relative;
-  font-family: Arial, Verdana;
-  font-size: 15px;
-  margin: 0;
-  padding: 5px 10px 5px 10px;
-  text-decoration: none;
+		img {
+		display:block;
+		background-color:#b2f4ff;
+		padding: 5px 10px 5px 10px;
+		margin:10px 0px 0px 0px;
+		}
+		img:hover, img:active{
+		display:block;
+		padding: 5px 5px 5px 15px;
+		}
+		nav a {
+		display:block;
+		float:left;
+		positon:relative;
+		font-family: Arial, Verdana;
+		font-size: 20px;
+		margin: 0;
+		padding: 5px 10px 5px 10px;
+		text-decoration: none;
  
-}
-a:hover, a:active{ background-color:#FFFFCC;}
-nav {background-color:#cFDFFF;  height:30px;}
-nav a {
-	display:block;
-	float:left;
-	positon:relative;
-  font-family: Arial, Verdana;
-  font-size: 20px;
-  margin: 0;
-  padding: 5px 10px 5px 10px;
-  text-decoration: none;
- 
-}
-nav a:hover, nav a:active{ background-color:#FFFFCC;}
-</style>
+		}
+		nav a:hover, nav a:active{ background-color:#ffffff;}
+    </style>
 </head>
 
 <body >
@@ -55,7 +52,6 @@ nav a:hover, nav a:active{ background-color:#FFFFCC;}
         </header>
     </div>
 	
-<hr>
 <h1 align = center> Projects </h1>
 <img src="/images/UCRSpoon.png" alt="pic of app" width="220" height="350" align="right" >
 
