--- a/engra.html
+++ b/engra.html
@@ -1,55 +1,79 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-<title> Samuel Villarreal ,Engineering Affiliations</title>
-<style type="text/css">
-h1 {color:GREEN;text-align:center;}
-p {color:#000033;}
-a {
-	display:block;
-	background-color:#cFDFFF
-	positon:relative;
-  font-family: Arial, Verdana;
-  font-size: 20px;
-  margin: 0;
-  padding: 5px 10px 5px 10px;
-  text-decoration: none;
+	<head>
+	<title> Samuel Villarreal ,Engineering Affiliations</title>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Test : test">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<style type="text/css">
+		img {
+		display:block;
+		background-color:#b2f4ff;
+		padding: 5px 10px 5px 10px;
+		margin:10px 0px 0px 0px;
+		}
+		img:hover, img:active{
+		display:block;
+		padding: 5px 5px 5px 15px;
+		}
+		nav a {
+		display:block;
+		float:left;
+		positon:relative;
+		font-family: Arial, Verdana;
+		font-size: 20px;
+		margin: 0;
+		padding: 5px 10px 5px 10px;
+		text-decoration: none;
  
-}
-a:hover, a:active{ background-color:#FFFFCC;}
-nav {background-color:#cFDFFF;  height:30px;}
-nav a {
-	display:block;
-	float:left;
-	positon:relative;
-  font-family: Arial, Verdana;
-  font-size: 20px;
-  margin: 0;
-  padding: 5px 10px 5px 10px;
-  text-decoration: none;
- 
-}
-nav a:hover, nav a:active{ background-color:#FFFFCC;}
-</style>
+		}
+		nav a:hover, nav a:active{ background-color:#ffffff;}
+    </style>
 </head>
 
-<body style="background-color:#c0c0c0;">
-<hr>
-<nav> <center><a  href = "http://www.cs.ucr.edu/~svill017/">Home</a> 
-	<a  href = "./projects.html">Projects</a>
-	<a   href = "./ran.html">Random</a>
-	<a   href = "./res.html">Resume</a></center>
-	
-</nav>
-<h1 align = center> Engineering Affiliations </h1>
+<body >
+<!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/sigmaxz/mygithubpage">View on GitHub</a>
 
-<h3> <a href ="http://www.ieee.org/index.html">Institute of Electrical and Electronics Engineers</a> National member and volunteer</h3>
-<p> Very active professional chapter. Meet many great and talented individuals. Have many projects 
-to work on such as the Display Board Project. Volunteer for outreach events such as Merit Badge Day.</p>
-<h3> <a href ="http://acm.frvl.us/mission/">Association for Computing Machinery </a>member</h3>
-<p> Network with peers closely associated with my Major. Guest speakers from industry are very insightful</p>
-<h3> <a href ="www.engr.ucr.edu/~swe/">Society of Women Engineers</a> member and volunteer </h3>
-<p> Chapter of very active and diverse engineers. Plenty of programs for outreach and self-improvement. Also volunteer for outreach events</p>
-</body>
+          <h1 id="project_title">Samuel Villarreal</h1>
+         <!-- <h2 id="project_tagline">Software Engineer </h2> -->
+		  <h3  > <a style="color:white" href="https://ucr.edu/">University of California Riverside </a> ,<a style="color:white" href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
+		  <nav> <a  href = "./index.html">Home</a> 
+		  <a   href = "./projects.html">Projects</a>
+		  <a   href = "./res.html">Resume</a>
+	
+		  </nav>
+
+        </header>
+    </div>
+	
+	<!-- MAIN CONTENT -->
+	<div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
+	
+	<h1 align = center> Engineering Affiliations </h1>
+
+	<h3> <a href ="http://www.ieee.org/index.html">Institute of Electrical and Electronics Engineers</a> National member and volunteer</h3>
+	<p> Very active professional chapter. Meet many great and talented individuals. Have many projects 
+	to work on such as the Display Board Project. Volunteer for outreach events such as Merit Badge Day.</p>
+	<h3> <a href ="http://acm.frvl.us/mission/">Association for Computing Machinery </a>member</h3>
+	<p> Network with peers closely associated with my Major. Guest speakers from industry are very insightful</p>
+	<h3> <a href ="www.engr.ucr.edu/~swe/">Society of Women Engineers</a> member and volunteer </h3>
+	<p> Chapter of very active and diverse engineers. Plenty of programs for outreach and self-improvement. Also volunteer for outreach events</p>
+	
+	    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Test maintained by <a href="https://github.com/sigmaxz">sigmaxz</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+	
+	</body>
 </html>
