--- a/engra.html
+++ b/engra.html
@@ -58,12 +58,15 @@
 	
 	<h1 align = center> Engineering Affiliations </h1>
 
-	<h3> <a href ="http://www.ieee.org/index.html">Institute of Electrical and Electronics Engineers</a> National member and volunteer</h3>
+	<h3> <a href ="http://www.ieee.org/index.html">Institute of Electrical and Electronics Engineers</a> 
+	<br> National member and volunteer</h3>
 	<p> Very active professional chapter. Meet many great and talented individuals. Have many projects 
 	to work on such as the Display Board Project. Volunteer for outreach events such as Merit Badge Day.</p>
-	<h3> <a href ="http://acm.frvl.us/mission/">Association for Computing Machinery </a>member</h3>
+	<h3> <a href ="http://acm.frvl.us/mission/">Association for Computing Machinery </a>
+	<br> member</h3>
 	<p> Network with peers closely associated with my Major. Guest speakers from industry are very insightful</p>
-	<h3> <a href ="www.engr.ucr.edu/~swe/">Society of Women Engineers</a> member and volunteer </h3>
+	<h3> <a href ="www.engr.ucr.edu/~swe/">Society of Women Engineers</a>
+	<br> member and volunteer </h3>
 	<p> Chapter of very active and diverse engineers. Plenty of programs for outreach and self-improvement. Also volunteer for outreach events</p>
 	
 	    <!-- FOOTER  -->
