--- a/res.html
+++ b/res.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-	<title> Samuel Villarreal ,Engineering Affiliations</title>
+	<title> Samuel Villarreal ,Resume</title>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Test : test">
@@ -34,7 +34,7 @@
     </style>
 </head>
 
-<body >
+<body style="background-color:#c0c0c0;">
 <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -45,38 +45,21 @@
 		  <h3  > <a style="color:white" href="https://ucr.edu/">University of California Riverside </a> ,<a style="color:white" href="http://www.engr.ucr.edu">  Bourns College of Engineering</a></h3>
 		  <nav> <a  href = "./index.html">Home</a> 
 		  <a   href = "./projects.html">Projects</a>
-		  <a   href = "./res.html">Resume</a>
+		  <a   href = "./engra.html">Resume</a>
 	
 		  </nav>
 
         </header>
     </div>
 	
-	<!-- MAIN CONTENT -->
-	<div id="main_content_wrap" class="outer">
-    <section id="main_content" class="inner">
+	<iframe src="Samuel_Villarreal_Resume.pdf" style="width:1218px; height:900px;" frameborder="0" mozbrowser></iframe>
 	
-	<h1 align = center> Engineering Affiliations </h1>
-
-	<h3> <a href ="http://www.ieee.org/index.html">Institute of Electrical and Electronics Engineers</a> 
-	<br> National member and volunteer</h3>
-	<p> Very active professional chapter. Meet many great and talented individuals. Have many projects 
-	to work on such as the Display Board Project. Volunteer for outreach events such as Merit Badge Day.</p>
-	<h3> <a href ="http://acm.frvl.us/mission/">Association for Computing Machinery </a>
-	<br> member</h3>
-	<p> Network with peers closely associated with my Major. Guest speakers from industry are very insightful</p>
-	<h3> <a href ="www.engr.ucr.edu/~swe/">Society of Women Engineers</a>
-	<br> member and volunteer </h3>
-	<p> Chapter of very active and diverse engineers. Plenty of programs for outreach and self-improvement. Also volunteer for outreach events</p>
-	
-	    <!-- FOOTER  -->
+		    <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Test maintained by <a href="https://github.com/sigmaxz">Samuel Villarreal</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-	
 	</body>
 </html>
