--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ I am currently looking for Full-time opportunities and graduate programs </p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Test maintained by <a href="https://github.com/sigmaxz">sigmaxz</a></p>
+        <p class="copyright">Test maintained by <a href="https://github.com/sigmaxz">Samuel Villarreal</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
