--- a/res.html
+++ b/res.html
@@ -52,7 +52,7 @@
         </header>
     </div>
 	
-	<iframe src="Samuel_Villarreal_Resume.pdf" style="width:1000px; height:900px;" frameborder="0" mozbrowser></iframe>
+	<iframe src="Samuel_Villarreal_Resume.pdf" align="center" style="width:1000px; height:900px;" frameborder="0" mozbrowser></iframe>
 	
 		    <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
