--- a/res.html
+++ b/res.html
@@ -52,6 +52,9 @@
         </header>
     </div>
 	
+	<!-- MAIN CONTENT -->
+	<div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
 	<iframe src="Samuel_Villarreal_Resume.pdf" align="center" style="width:1000px; height:900px;" frameborder="0" mozbrowser></iframe>
 	
 		    <!-- FOOTER  -->
