--- a/index.html
+++ b/index.html
@@ -87,20 +87,20 @@
 		}	
 	}
 	else{
-		document.write("<p> Hi anonymous")
+		document.write("<p> Hi Anonymous")
 	}
 </script>
- , I am Samuel Villarreal and this is my University of California Riverside homepage.<br>
- This is my fourth and final year as an undergraduate working towards B.S. in Computer Science. <br>
- My graduation date is June 2015. </p>
+ , my name is Samuel Villarreal and this is my personal homepage.<br>
+ I am in my final year as an undergraduate working towards B.S. in Computer Science. <br>
+ My graduation date is set for June 2015. </p>
 <hr>
 <br><br><br><br><br>
 <h2> Interests </h2>
 <p> The field of Computer Security has always been a field of interest throughout my undergraduate 
-studies. Knowledge in the areas of Operating Systems, Networking and Databases may prove be useful.
+studies. Knowledge in the areas of Operating Systems, Networks and Databases are my foundation.
 I took Computer Secruity with Professor and Associate Dean Ravishankar. Computer Secruity is a hard and rewarding course packed with knowledge computer science professionals should know. 
 <br>
-Another of my interests is in the field of High Performance Computing. Software and applications are not fully taking advantage of the power of multicore processors. The future in computer science is going to be efficiently managing these new architectures. 
+Another of my interests is in the field of High Performance Computing. Software and applications are not fully taking advantage of the power of multi-core processors. The future in computer science is going to be efficiently managing these new architectures. 
 In a related matter I did research with Dr.Chen at the University of California Riverside concerning matrix multiplication. <br> 
 I am currently looking for Full-time opportunities and graduate programs </p>
 <hr>
@@ -111,14 +111,15 @@ I am currently looking for Full-time opportunities and graduate programs </p>
 	<li> CS120A Logic design</li>
 	<li> CS120B Embedded Systems</li>
 	<li> CS150 Theory of Automata</li>
-	<li> CS152 Compilers <font color='red'>(in Progress)</font> </li>
+	<li> CS152 Compilers </li>
 	<li> CS153 Operating Systems </li>
 	<li> CS160 Concurrent Programming and Parallel Systems</li>
 	<li> CS161  Design and Architecture of Computer Systems</li>
 	<li margin:10; > CS141 Intermideate Algorithms and Data Structures </li>
+	<li> CS164 Computer Networks <font color='red'>(Currently Enrolled)</font></li>
 	<li> CS165 Computer Security </li>
 	<li> CS166 Database Management systems </li>
-	<li> CS169 Wireless Networks <font color='red'>(in Progress)</font> </li>
+	<li> CS169 Mobile Wireless Networks </li>
 	<li> CS172 Information Retrival </li>
 	<li> CS180 Software Engineering </li>
 </ul>
