about me update

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 	}
 </script>
  , my name is Samuel Villarreal and this is my personal homepage.<br>
- I am in my final year as an undergraduate working towards B.S. in Computer Science. <br>
- My graduation date is set for June 2015. </p>
+ I am a recent graduate from the University of California Riverside. I graduated with a Bachelors of Science in Computer Science</p>
 <hr>
 <br><br><br><br><br>
 <h2> Interests </h2>
@@ -115,8 +114,8 @@ I am currently looking for Full-time opportunities and graduate programs </p>
 	<li> CS153 Operating Systems </li>
 	<li> CS160 Concurrent Programming and Parallel Systems</li>
 	<li> CS161  Design and Architecture of Computer Systems</li>
-	<li margin:10; > CS141 Intermideate Algorithms and Data Structures </li>
-	<li> CS164 Computer Networks <font color='red'>(Currently Enrolled)</font></li>
+	<li margin:10; > CS141 Intermediate Algorithms and Data Structures </li>
+	<li> CS164 Computer Networks </li>
 	<li> CS165 Computer Security </li>
 	<li> CS166 Database Management systems </li>
 	<li> CS169 Mobile Wireless Networks </li>
