project update compiler/network

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	}
 </script>
  , my name is Samuel Villarreal and this is my personal homepage.<br>
- I am a recent graduate from the University of California Riverside. I graduated with a Bachelors of Science in Computer Science</p>
+ I am a recent graduate from the University of California Riverside. I graduated with a Bachelors of Science in Computer Science. If you wish to contact me feel free to refer to my resume.</p>
 <hr>
 <br><br><br><br><br>
 <h2> Interests </h2>
@@ -100,7 +100,7 @@ studies. Knowledge in the areas of Operating Systems, Networks and Databases are
 I took Computer Secruity with Professor and Associate Dean Ravishankar. Computer Secruity is a hard and rewarding course packed with knowledge computer science professionals should know. 
 <br>
 Another of my interests is in the field of High Performance Computing. Software and applications are not fully taking advantage of the power of multi-core processors. The future in computer science is going to be efficiently managing these new architectures. 
-In a related matter I did research with Dr.Chen at the University of California Riverside concerning matrix multiplication. <br> 
+In a related matter I did research with Dr.Chen at the University of California Riverside concerning soft error correction in matrix multiplication. <br> 
 I am currently looking for Full-time opportunities and graduate programs </p>
 <hr>
 <h2> Courses</h2>
