--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,23 @@
     <section id="main_content" class="inner">
 
 	<h1 align = center> Projects </h1>
+	<img src="/images/heat.png" alt="pic of app" width="220" height="350" align="right" >
+	
+	<h3> Senior Design in Software Engineering "Meow Meow"</h3>
+	<p> hi fdfffffffffffffffffffffffffffffffffffffffff</p>
+	
+	<br><br><br><br><br><br><br><br><br><br>
+	
+	<h3> Simple Messaging Client/Server Application</h3>
+	<p> This project was for my computer networks course. Some key client features are subscription management, message creation with hashtags, and real time message displaying. 
+	Some key server features are getting messages handled count, adding new users, managing message information.
+	To accomplish this task I used TCP/IP programming in Python. Both the server and client are multi-threaded to handle my messaging protocol.
+	The applications were run on an instant virtual network called Mininet.</p>
+	<h3> MINI-L Compiler Project</h3>
+	<p> This was a three phase project for my compiler design course. The first phase was generating a lexical analyzer using the tool flex alonside C.
+	The next two phases are the parser and code generation. To complete the last two phases I designed a context-free grammar then used Bison to generate a parser.
+	Lastly I used the production rules from the grammar to generate the code.</p>
+	<br>
 	<img src="/images/UCRSpoon.png" alt="pic of app" width="220" height="350" align="right" >
 
 	<h3> UCRSpoon </h3>
