senior design project

--- a/projects.html
+++ b/projects.html
@@ -61,9 +61,13 @@
 	<img src="/images/heat.png" alt="pic of app" width="220" height="350" align="right" >
 	
 	<h3> Senior Design in Software Engineering "Meow Meow"</h3>
-	<p> hi fdfffffffffffffffffffffffffffffffffffffffff</p>
+	<p> This is a "high risk high reward" android application that mirrors Yik-Yak. I teamed up with three other classmates develop this project.
+	This application lets you anonymously login and post message and pictures that are viewable only in your area. 
+	You can comment, dis/like items, manage your history, or peek at other areas. My main responsibility was working on location features. 
+    I used both google play servies API and Google Places to accomplish my task.
+	I was also able to complete the extra credit heat map of your peeking area.</p>
 	
-	<br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br>
 	
 	<h3> Simple Messaging Client/Server Application</h3>
 	<p> This project was for my computer networks course. Some key client features are subscription management, message creation with hashtags, and real time message displaying. 
